# paperforge-rs

./: .env.example  .env.local  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  prometheus.yml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/common/: Cargo.toml  build.rs
crates/common/src/: lib.rs
crates/common/src/auth/: mod.rs
crates/common/src/cache/: mod.rs
crates/common/src/config/: mod.rs
crates/common/src/context/: context_stitcher.rs  mod.rs  query_parser.rs  reasoner.rs  synthesizer.rs
crates/common/src/db/: mod.rs  repository.rs
crates/common/src/db/models/: chunk.rs  citation.rs  ingestion_job.rs  mod.rs  paper.rs  session.rs  tenant.rs
crates/common/src/embeddings/: mod.rs
crates/common/src/errors/: mod.rs
crates/common/src/metrics/: mod.rs
crates/common/src/queue/: mod.rs
crates/context/: Cargo.toml
crates/context/src/: main.rs
crates/embedding-worker/: Cargo.toml
crates/embedding-worker/src/: main.rs  processor.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/gateway/src/handlers/: citations.rs  health.rs  intelligence.rs  jobs.rs  mod.rs  papers.rs  search.rs  sessions.rs
crates/gateway/src/middleware/: mod.rs  rate_limit.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: chunker.rs  errors.rs  main.rs  pdf.rs  processor.rs
crates/search/: Cargo.toml
crates/search/src/: grpc.rs  main.rs
crates/search/src/citation/: graph.rs  mod.rs  pagerank.rs
crates/search/src/retrieval/: bm25.rs  fusion.rs  hybrid.rs  mod.rs  vector.rs
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTEXT_ENGINE_DESIGN.md  DATASETS.md  DEPLOYMENT.md  FRONTEND_DESIGN.md  IMPLEMENTATION_PLAN.md  PRD.md  schema.sql
docs/migrations/: 002_partition_chunks.sql
frontend/: README.md  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/chat/: page.tsx
frontend/src/app/(dashboard)/graph/: page.tsx
frontend/src/app/(dashboard)/search/: page.tsx
frontend/src/components/layout/: app-sidebar.tsx  providers.tsx
frontend/src/components/ui/: data-table.tsx
k8s/hpa/: auto-scaling.yaml
proto/: context.proto  embedding.proto  ingestion.proto  search.proto
scripts/: fetch_arxiv.py  localstack-init.sh  test_pipeline.sh
src/: errors.rs  main.rs  middleware.rs
src/db/: mod.rs  models.rs  repository.rs
src/db/models/: chunk.rs
src/embeddings/: client.rs
src/metrics/: mod.rs
src/routes/: ingest.rs  mod.rs  search.rs
src/services/: ingest.rs  mod.rs  search.rs
v1_archive/src/: config.rs  main.rs
v1_archive/src/db/models/: mod.rs  paper.rs
v1_archive/src/embeddings/: client.rs  mod.rs
v1_archive/src/metrics/: mod.rs
v1_archive/src/routes/: health.rs  search.rs
v1_archive/src/services/: ingest.rs  mod.rs  search.rs
