[package]
name = "paperforge-rs"
version = "0.1.0"
edition = "2021"
authors = ["PaperForge Team"]
description = "Production-grade research paper indexing and semantic retrieval microservice"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Web Framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database & ORM
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
pgvector = { version = "0.3", features = ["sqlx"] }

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
config = "0.14"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.10"
metrics-exporter-prometheus = "0.13"
axum-prometheus = "0.6"

# HTTP Client (for external embeddings API if needed)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
