[package]
name = "paperforge-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id", "util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
pgvector = { version = "0.3", features = ["sqlx"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.21" # Upgraded to match metrics-exporter-prometheus
metrics-exporter-prometheus = "0.12.1"
axum-prometheus = "0.4" # Downgrading due to potential breaking changes in metrics ecosystem, actually 0.6 is good but metrics needs to align.
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
async-trait = "0.1"
rand = "0.8" # Added for MockEmbedder if needed
validator = { version = "0.16", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"

# Correction: metrics 0.21 and exporter 0.12 align.
