# PaperForge-rs V2 Workspace
# Updated: 2026-02-07 - Latest stable compatible versions

[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/gateway",
    "crates/ingestion",
    "crates/search",
    "crates/context",
    "crates/embedding-worker",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.78"
authors = ["PaperForge Team"]
license = "MIT"

[workspace.dependencies]
# =====================================
# Async Runtime
# =====================================
tokio = { version = "1.43", features = ["full"] }

# =====================================
# Web Framework (Axum ecosystem)
# =====================================
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "util", "compression-gzip"] }
hyper = { version = "1.6", features = ["full"] }

# =====================================
# Serialization
# =====================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# =====================================
# Database (SeaORM + SQLx + pgvector)
# =====================================
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# =====================================
# Types
# =====================================
uuid = { version = "1.12", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# =====================================
# Error Handling
# =====================================
thiserror = "2.0"
anyhow = "1.0"

# =====================================
# Configuration
# =====================================
dotenvy = "0.15"
config = "0.14"

# =====================================
# Logging & Tracing (OpenTelemetry ecosystem)
# =====================================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace"] }

# =====================================
# Metrics (metrics-rs ecosystem)
# =====================================
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# =====================================
# HTTP Client
# =====================================
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# =====================================
# Async Utilities
# =====================================
async-trait = "0.1"
futures = "0.3"

# =====================================
# Validation & Crypto
# =====================================
validator = { version = "0.19", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
jsonwebtoken = "9.3"
argon2 = "0.5"

# =====================================
# gRPC (Tonic ecosystem - for internal communication)
# =====================================
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# =====================================
# AWS SDK (SQS for message queue)
# =====================================
aws-sdk-sqs = "1.56"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-types = "1.3"

# =====================================
# Redis (caching & session)
# =====================================
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "cluster-async"] }

# =====================================
# Resilience
# =====================================
governor = "0.8"
backoff = { version = "0.4", features = ["tokio"] }

# =====================================
# Regex (lightweight)
# =====================================
regex-lite = "0.1"

# =====================================
# Testing
# =====================================
rand = "0.8"
tokio-test = "0.4"

# =====================================
# Internal Crates
# =====================================
paperforge-common = { path = "crates/common" }
