[package]
name = "paperforge-context"
version.workspace = true
edition.workspace = true
description = "PaperForge Context Engine - Research intelligence and LLM integration"

[[bin]]
name = "context"
path = "src/main.rs"

[dependencies]
paperforge-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# gRPC for internal communication
tonic = { workspace = true }
prost = { workspace = true }

# HTTP client for LLM APIs
reqwest = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
