[package]
name = "paperforge-gateway"
version.workspace = true
edition.workspace = true
description = "PaperForge API Gateway - Authentication, rate limiting, and routing"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
# Core shared library
paperforge-common = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Logging & tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Validation
validator = { workspace = true }

# Rate limiting
governor = { workspace = true }

# HTTP client (for downstream services)
reqwest = { workspace = true }

# Async utilities
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
