[package]
name = "paperforge-ingestion"
version.workspace = true
edition.workspace = true
description = "PaperForge Ingestion Service - Async paper processing and chunking"

[[bin]]
name = "ingestion"
path = "src/main.rs"

[dependencies]
paperforge-common = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-sdk-sqs = { workspace = true }
aws-config = { workspace = true }
aws-types = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
backoff = { workspace = true }

# PDF & Text Processing
lopdf = { workspace = true }
text-splitter = { workspace = true }

# gRPC for internal communication
tonic = { workspace = true }
prost = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
