[package]
name = "paperforge-search"
version.workspace = true
edition.workspace = true
description = "PaperForge Search Service - Vector, BM25, and hybrid search"

[[bin]]
name = "search"
path = "src/main.rs"

[dependencies]
paperforge-common = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Database access
sea-orm = { workspace = true }

# gRPC for internal communication
tonic = { workspace = true }
prost = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Hashing for cache keys
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
